<resources>
    <string name="app_name">A9 Accessibility Service</string>
    <string name="title_activity_settings">A9 Accessibility Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="speed">Speed</string>
    <string name="smooth">Smooth</string>
    <string name="balanced">Balanced</string>
    <string name="clear">Clear</string>
    <string name="refresh_mode">Refresh Mode</string>
    <string name="static_aod_opacity">Static AOD Opacity</string>
    <string name="opaque">Opaque</string>
    <string name="semiopaque">Semiopaque</string>
    <string name="semiclear">Semiclear</string>
    <string name="frontlight_controls">Frontlight Controls</string>
    <string name="additional_controls_text">Additional Controls</string>
</resources>