<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp"
    android:background="@drawable/inset_border_drawable"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:id="@+id/refresh_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/refresh_mode" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:src="@drawable/baseline_settings_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/button1"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button2"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/balanced" />

        <Button
            android:id="@+id/button3"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/smooth" />

        <Button
            android:id="@+id/button4"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:text="@string/speed" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frontlight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frontlight_controls"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/light_seekbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_moon_24" />

            <SeekBar
                android:id="@+id/light_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:thumbTint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/light_warm_seekbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_brightness_high_24_dark" />

            <SeekBar
                android:id="@+id/light_warm_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="10dp"
                android:thumbTint="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/additional_controls_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/additional_controls_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/auto_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Auto Refresh"
                android:thumbTint="@color/black" />

            <Switch
                android:id="@+id/anti_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Anti-Shake"
                android:thumbTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
